--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="utf-8">
         <title>Macro Manager</title>
-        <link rel="stylesheet" href="./css/foundation.min.css">
-        <link rel="stylesheet" href="./css/normalize.css">
+        <link rel="stylesheet" href="/css/foundation.min.css">
+        <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/dataTables.foundation.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,13 +41,12 @@
             </div>
         </section>
 
-          <!-- Javascript inclusions -->
-          <script src="./js/jquery.js"></script>
+          <script src="/js/libs/jquery.min.js"></script>
+          <script src="/js/libs/foundation.min.js"></script>
+          <script src="/js/libs/dashboard.js"></script>
           <script src="./js/jquery.dataTables.js"></script>
-          <script src="./js/foundation.min.js"></script>
           <script src="./js/dataTables.foundation.js"></script>
           <script src="./js/moment.js"></script>
-          <script src="/js/libs/dashboard.js"></script>
 
           <script type="text/javascript">
             $.fn.selectText = function () {
@@ -131,14 +130,12 @@
                 var new_idx = indices.length > 0 ? Math.max.apply(null, indices) + 1 : 1;
                 fabmoDashboard.updateMacro(new_idx, {}, function(err, result) {
                     macro_table.ajax.reload();
-                    if(err) {
-                        console.error(err);
-                    }
+                    fabmoDashboard.notify('error', err);
                 });
                 evt.preventDefault();
-            });
+            }); 
 
-            $('#macro_table tbody').on('dblclick', 'td', function () {
+            $('#macro_table tbody').on('click', 'td', function () {
                 var td = $(this);
                 var tr = td.closest('tr');
                 var row = macro_table.row(tr);
@@ -146,6 +143,9 @@
                 var macro = row.data();
                 var col = cell.index().column;
                 var key = col_idx[col];
+                var ids = macro_table.columns(1).data().toArray()[0];
+                var error_message = null;
+
                 if(td.hasClass('editable')) {
                     var saved_text = td.text();
                     td.attr('contenteditable', true);
@@ -153,6 +153,7 @@
                     td.selectText();
                     td.on('keydown', function(evt) {
                         switch(evt.which) {
+                            case 09:
                             case 13: // Enter
                                 td.attr('contenteditable', true);
                                 td.blur();
@@ -162,6 +163,10 @@
                                     try {
                                         v = parseInt(td.text())
                                         update[key] = v;
+                                        if(ids.indexOf(v) != -1) {
+                                            ok_to_update = false;
+                                            error_message = "Macro number " + v + " already exists."
+                                        }
                                     } catch(e) {
                                         ok_to_update = false;
                                     }
@@ -169,11 +174,14 @@
                                     update[key] = td.text();
                                 }
                                 if(ok_to_update) {
-                                    fabmoDashboard.updateMacro(macro.index, update, function(err, result) {
+                                    fabmoDashboard.updateMacro(parseInt(macro.index), update, function(err, result) {
                                         macro_table.ajax.reload();
                                     });                                    
                                 } else {
                                     td.text(saved_text);                                    
+                                    if(error_message) {
+                                        fabmoDashboard.notify('error', error_message);
+                                    }
                                 }
 
                                 evt.preventDefault();
