--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -172,7 +172,7 @@
               <canvas width="220px" height="220px" id="wheel"></canvas>
             </div>
             <div id="mykeypad" class="widget fabmo-manual-control" style="text-align: center; width: 220px; height: 75px;">
-              <div id="keypad" class="keypad noselect">Keyboard</div>
+              <div id="keyboard" class="keyboard noselect">Keyboard</div>
             </div>
 
             <ul class="off-canvas-list fabmo-status fabmo-file-control">
