--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -52,7 +52,7 @@
 
   <div id="editor"></div>
 
-  <script src="/js/libs/jquery.js" type="text/javascript"></script>
+  <script src="/js/libs/jquery.min.js" type="text/javascript"></script>
   <script src="/js/libs/dashboard.js" type="text/javascript"></script>
   <script src="/js/libs/foundation.min.js" type="text/javascript"></script>
   <script src="js/ace/ace.js" type="text/javascript"></script>
