--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -145,7 +145,7 @@
 </div>
 
   <!-- Javascript inclusions -->
-  <script src="/js/libs/jquery.js"></script>
+  <script src="/js/libs/jquery.min.js"></script>
   <script src="./js/jquery.dataTables.js"></script>
   <script src="./js/jquery.dragster.js"></script>
   <script src="/js/libs/foundation.min.js"></script>
