dashboard.js -> fabmo.js

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -4,12 +4,12 @@
   <title>G-Code Editor</title>
   <meta charset="utf-8"/>
   
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/foundation.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/foundation.min.js"></script>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/foundation.min.js"></script>
 
 </head>
 <body style="background-color: #ffffff;">
@@ -1535,8 +1535,8 @@
 </form>
 
 </div>
-  <script src="/js/libs/dashboard.js"></script>
-  <script src="js/configuration.js"></script>
+  <script src="/js/libs/fabmo.js"></script>
+  <script src="./js/configuration.js"></script>
   <script>
     var configData = null;
 
