--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -3,8 +3,8 @@
 	<meta charset="utf-8">
 	<title>Job Manager</title>
 	
-	<link rel="stylesheet" href="./css/normalize.css">
-	<link rel="stylesheet" href="./css/foundation.min.css">
+	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/foundation.min.css">
 	<link rel="stylesheet" href="./css/dataTables.foundation.css">
 	<link rel="stylesheet" href="./css/style.css">
 
@@ -15,7 +15,7 @@
   <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a id="app-header" >Job Manager</a></h1>
+      <h1><a id="app-header">Job Manager</a></h1>
     </li>
     <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
   </ul>
@@ -158,7 +158,7 @@
   <script src="/js/libs/foundation.min.js"></script>
   <script src="./js/dataTables.foundation.js"></script>
   <script src="./js/moment.js"></script>
-  <script src="/js/libs/dashboard.js"></script>
+  <script src="/js/libs/fabmo.js"></script>
 
 
   <script type="text/javascript">
