--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -43,7 +43,7 @@
 
           <script src="/js/libs/jquery.min.js"></script>
           <script src="/js/libs/foundation.min.js"></script>
-          <script src="/js/libs/dashboard.js"></script>
+          <script src="/js/libs/fabmo.js"></script>
           <script src="./js/jquery.dataTables.js"></script>
           <script src="./js/dataTables.foundation.js"></script>
           <script src="./js/moment.js"></script>
