--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -4,8 +4,8 @@
 	<title>Apps</title>
 
 	<!-- CSS standardisation & inclusion -->
-	<link rel="stylesheet" href="./css/foundation.min.css">
-	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="/css/foundation.min.css">
+	<link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="./css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -54,10 +54,10 @@
 	</div>
 
   <!-- Javascript inclusions -->
-  <script src="./js/libs/jquery-1.10.2.js"></script>
-  <script src="./js/libs/foundation.min.js"></script>
+  <script src="/js/libs/jquery.min.js"></script>
+  <script src="/js/libs/foundation.min.js"></script>
   <script src="./js/libs/jquery.dragster.js"></script>
-  <script src="/js/libs/dashboard.js"></script>
+  <script src="/js/libs/fabmo.js"></script>
  
   <script type="text/javascript">
 
