--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -53,7 +53,7 @@
   <div id="editor"></div>
 
   <script src="/js/libs/jquery.min.js" type="text/javascript"></script>
-  <script src="/js/libs/dashboard.js" type="text/javascript"></script>
+  <script src="/js/libs/fabmo.js" type="text/javascript"></script>
   <script src="/js/libs/foundation.min.js" type="text/javascript"></script>
   <script src="js/ace/ace.js" type="text/javascript"></script>
 
