--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="/css/foundation.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/foundation.min.js"></script>
+  <script src="/js/libs/jquery.min.js"></script>
+  <script src="/js/libs/foundation.min.js"></script>
 
 </head>
 <body style="background-color: #ffffff;">
