Fix path to dashboard.

--- a/dashboard/apps/previewer.fma/index.html
+++ b/dashboard/apps/previewer.fma/index.html
@@ -30,7 +30,7 @@
     <div id="preview" style="display: inline-block;">
     </div>
 
-  <script src="/js/libs/dashboard.js"></script>
+  <script src="/js/libs/fabmo.js"></script>
   <script src="js/gcodetogeometry.min.js"></script>
 
   <script src="js/three.min.js"></script>
